# self-improving-cancellation-flow

./: .gitignore  DESIGN.md  PLAN.md  README.md  nohup.out  program.md  pyproject.toml  run_daily_cycle.sh  run_overnight.sh  vercel.json
api/: dashboard.py  dashboard_data.py  gbrain_memory.py  gbrain_memory_page.py  jungle_experiment_spec.py  jungle_present_offers.py  policy_state.json  record_outcome.py  requirements.txt  zeo_present_offers.py
dashboard/: app.js  data.json  gbrain-memory.html  index.html  monitor.html  styles.css
data/: jungle_ai_seed_profiles.json  zeo_amp_analysis_output.csv  zeo_eval_cohort.json
docs/: 2026-03-31-office-hours-jungle-ai-churn-cta.md
optimizer_data/policy/: decisions.jsonl  outcomes.jsonl
optimizer_output/: llm_score_cache.json  policy_state_final.json  policy_state_phase1.json  policy_state_phase2.json  results_phase1.tsv  results_phase2.tsv  summary.json
optimizer_output/zeo_auto/: llm_score_cache.json  policy_state_final.json  policy_state_phase1.json  policy_state_phase2.json  results_phase1.tsv  results_phase2.tsv  summary.json
optimizer_output/zeo_test/: llm_score_cache.json  summary.json
scripts/: build_zeo_eval_cohort.py  run_zeo_overnight.sh  smoke_test_zeo.py
src/cta_autoresearch/: cli.py  (+29 more)
src/cta_autoresearch.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_cancel_policy.py  test_config.py  test_features.py  test_gbrain_memory.py  test_jungle_experiment_spec.py  test_lab_cli.py  test_optimizer.py  test_policy_optimizer.py  test_server.py  test_user_model.py
(+12 files in other folders)
